--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   fl_chart: ^0.36.2
   intl: ^0.17.0
   google_fonts: ^2.1.0
+  animated_splash_screen: ^1.1.0
 
 dev_dependencies:
   flutter_test:
